stderr.log
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3, in <module>
    import werkzeug
ImportError: No module named werkzeug
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3, in <module>
    import werkzeug
ImportError: No module named werkzeug
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3
    //import werkzeug
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3
    //import werkzeug
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3, in <module>
    import werkzeug
ImportError: No module named werkzeug
Traceback (most recent call last):
  File "/home8/melkamtechnology/flask_api/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 3, in <module>
    import werkzeug
ImportError: No module named werkzeug
